packages/scaml.1.2.0/tests/fail/op_revapply.ml
open SCaml
    
let main () () =
  [],
  assert (Int 3 = (+) (Int 1) (Int 1) |> (+) (Int 1))
